Tweets are now stored in the database

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "client-sessions": "*",
     "mysql": "*",
     "twit": "*",
-    "sparql-client": "*"
+    "sparql-client": "*",
+	"ejs": "*"
   }
 }
